force-app/main/default/objects/Restaurant__c/Restaurant__c.object-meta.xml
<CustomObject>
    <label>Restaurant</label>
    <nameField>
        <label>Restaurant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Restaurants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>