force-app/main/default/objects/Restaurant__c/fields/AverageMealCost__c.field-meta.xml
<CustomField>
    <fullName>AverageMealCost__c</fullName>
    <description>The average meal cost per person.</description>
    <label>Average Meal Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>