force-app/main/default/objects/Restaurant__c/fields/CommissionRate__c.field-meta.xml
<CustomField>
    <fullName>CommissionRate__c</fullName>
    <description>The commission rate agreed upon between the restaurant and the training company.</description>
    <label>Commission Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>