force-app/main/default/objects/Restaurant__c/fields/LocationAddress__c.field-meta.xml
<CustomField>
    <fullName>LocationAddress__c</fullName>
    <label>Location Address</label>
    <type>Address</type>
</CustomField>