force-app/main/default/objects/Restaurant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AverageMealCost__c</columns>
    <columns>CommissionRate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>